--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p><a href="https://www.w3.org/" target="_blank">
             <img src="WEB.jpg" width="35%"></a></p>
             
-        <p><a href="inhyung's first page.html" target="_blank">
+        <p><a href="1main.html" target="_blank">
         <img src="back arrow.jpg" width="40%"></a></p>
         
 </body>
