--- a/2html.html
+++ b/2html.html
@@ -19,7 +19,7 @@
         해석이 가능한 사용하기 쉬운 언어로 각광을 받고 있다.</p>
    <p> <a href="https://www.w3.org/" target="_blank"><img src="HTML.jpg" width="25%"></a></p>
 
-        <a href= "inhyung's first page.html" target="_blank">
+        <a href= "1main.html" target="_blank">
             <img src= "back arrow.jpg"></a>
 
 
