--- a/3css.html
+++ b/3css.html
@@ -31,7 +31,7 @@ thead, tbody태그가 새로 소개되었다.</p>
 <a href="https://www.w3.org/Style/CSS/specs.en.html" target="_blank"><img src="CSS.jpg" width="35%"></a>
 
 
-<h3><a href="inhyung's first page.html" target="_blank">
+<h3><a href="1main.html" target="_blank">
 <img src="back arrow.jpg" width="30%"></a></h3>
 </body>
 </html>
