--- a/4js.html
+++ b/4js.html
@@ -24,6 +24,6 @@
         라이브러리가 생기면서 자바스크립트 생태계는 크게 확장되고
         있으며, 그 위상도 점점 높아지고 있다. </p>
     <p><a href="https://www.w3resource.com/javascript/introduction/ECMA-and-javascript.php" target="_blank"><img src="JavaScript.jpg" width="30%"></a></p>
-    <a href="inhyung's first page.html" target="_blank"><img src="back arrow.jpg" width="30%"></a>
+    <a href="1main.html" target="_blank"><img src="back arrow.jpg" width="30%"></a>
 </body>
 </html>
